data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1444.wast
;; 5. **Test Description:**     Utilize an `unreachable` instruction within a loop body that is conditionally called using a `call`. Evaluate if proper trapping occurs without any return from the loop.    **Constraint Checked:** Proper trapping within loops and prevention of any looping or returns after `unreachable`.    **Relation to Improper Call/Return Handling:** Ensures that loops containing `unreachable` do not proceed with improper returns or multiple iterations.

(assert_invalid
  (module
    (func (loop
      (call 0)
      (unreachable)
    ))
    (func)
  )
  "type mismatch"
)